scenarios/01-simple/grpc/00-grpc-backend-b-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-backend-b
  labels:
    app.kubernetes.io/part-of: demo
    team: backend
